--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "node-sass src/main.scss public/style.css -w"
+    "compile": "node-sass src/styles/main.scss public/styles/style.css -w"
   },
   "keywords": [],
   "author": "",
